src/tests/fixtures/preprocessor/errors/error3.cpp
#include <src/tests/fixtures/preprocessor/empty.cpp>

int foo 132151

#define boo fdsa
